--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@ function updateUI() {
     const tax = taxable * TAX_RATE;
     if (taxable > 0) {
         taxEstimate.textContent = tax < 1
-            ? `${Math.round(tax * 100)}c tax owed estimate`
-            : `$${tax.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })} tax owed estimate`;
+            ? `${Math.round(tax * 100)}c rough tax estimate`
+            : `$${tax.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })} rough tax estimate`;
     } else {
         taxEstimate.textContent = "";
     }
@@ -514,4 +514,5 @@ updateUI();
 </script>
 </body>
 </html>
+
 
