--- a/index.html
+++ b/index.html
@@ -5,308 +5,341 @@
 <title>Tax Owing Tracker</title>
 
 <style>
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-    background: #0e0e0e;
-    color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+:root {
+    --bg:#0e0e0e;
+    --panel:#161616;
+    --panel-dark:#111;
+    --border:#2a2a2a;
+    --text:#f5f5f5;
+    --muted:#9a9a9a;
+    --accent:linear-gradient(90deg,#ff5f57,#ffb347);
 }
-
-.app {
-    width: 420px;
-    background: #161616;
-    padding: 24px;
-    border-radius: 14px;
-    box-shadow: 0 0 40px rgba(0,0,0,0.6);
-    max-height: 90vh;
-    overflow-y: auto;
+*{box-sizing:border-box;}
+body{
+    margin:0;
+    height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:var(--bg);
+    color:var(--text);
+    font-family:system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
 }
-
-h1 {
-    font-size: 18px;
-    margin-bottom: 6px;
-    font-weight: 600;
-    opacity: 0.9;
+.app{
+    width:420px;
+    background:var(--panel);
+    padding:24px;
+    border-radius:16px;
+    box-shadow:0 0 40px rgba(0,0,0,.6);
+    max-height:90vh;
+    overflow-y:auto;
 }
-
-#fyLabel {
-    font-size: 12px;
-    opacity: 0.6;
-    margin-bottom: 12px;
+h1{font-size:18px;margin:0 0 10px 0;}
+.fy-row{display:flex;justify-content:space-between;align-items:center;margin-bottom:14px;}
+.fy-controls{display:flex;align-items:center;gap:8px;font-size:12px;opacity:.8;}
+.numbers{display:flex;justify-content:space-between;margin-bottom:10px;}
+.threshold{font-size:13px;opacity:.7;}
+.totals{display:flex;flex-direction:column;align-items:flex-end;}
+#incomeDisplay{font-size:15px;}
+#taxEstimate{font-size:11px;color:var(--muted);}
+.bar-container{height:10px;background:var(--border);border-radius:999px;overflow:hidden;margin-bottom:18px;}
+.bar-fill{height:100%;width:0;background:var(--accent);transition:width .25s ease;}
+.controls{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-bottom:16px;}
+input,button{
+    background:#0f0f0f;
+    border:1px solid #333;
+    color:var(--text);
+    padding:8px;
+    border-radius:6px;
+    font-size:13px;
 }
-
-.numbers {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14px;
-    opacity: 0.85;
-    margin-bottom: 10px;
+button{cursor:pointer;}
+button:hover{background:#222;}
+.section{margin-bottom:14px;}
+.section h2{display:flex;justify-content:space-between;font-size:13px;margin:0 0 6px 0;opacity:.7;}
+.log-item{
+    background:var(--panel-dark);
+    padding:6px 8px;
+    border-radius:6px;
+    margin-bottom:6px;
+    font-size:13px;
 }
-
-.bar-container {
-    height: 10px;
-    background: #2a2a2a;
-    border-radius: 999px;
-    overflow: hidden;
-    margin-bottom: 18px;
+.log-top{display:flex;justify-content:space-between;}
+.desc{font-size:12px;opacity:.6;margin-top:2px;}
+.delete{color:#ff5f57;cursor:pointer;font-size:12px;}
+.nav{margin-bottom:12px;}
+.hidden{display:none!important;}
+.modal-backdrop{
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,.6);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    z-index:999;
 }
-
-.bar-fill {
-    height: 100%;
-    width: 0%;
-    background: linear-gradient(90deg, #ff5f57, #ffb347);
-    transition: width 0.25s ease;
-}
-
-.controls {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
-    margin-bottom: 16px;
-}
-
-input, button {
-    background: #0f0f0f;
-    border: 1px solid #333;
-    color: #fff;
-    padding: 8px;
-    border-radius: 6px;
-    font-size: 13px;
-}
-
-button {
-    cursor: pointer;
-}
-
-button:hover {
-    background: #2a2a2a;
-}
-
-.section {
-    margin-bottom: 14px;
-}
-
-.section h2 {
-    font-size: 13px;
-    opacity: 0.7;
-    margin-bottom: 6px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.log-item {
-    background: #111;
-    padding: 6px 8px;
-    border-radius: 6px;
-    margin-bottom: 6px;
-    font-size: 13px;
-}
-
-.log-top {
-    display: flex;
-    justify-content: space-between;
-}
-
-.desc {
-    font-size: 12px;
-    opacity: 0.7;
-    margin-top: 2px;
-}
-
-.delete {
-    color: #ff5f57;
-    cursor: pointer;
-    font-size: 12px;
-}
-
-.nav {
-    display: flex;
-    gap: 8px;
-    margin-bottom: 12px;
-}
-
-.hidden {
-    display: none;
+.modal{
+    background:var(--panel);
+    padding:20px;
+    border-radius:12px;
+    width:300px;
 }
 </style>
 </head>
-
 <body>
+
+<!-- ONBOARDING -->
+<div id="onboarding" class="modal-backdrop hidden">
+  <div class="modal" style="width:320px;">
+    <div id="slide-content"></div>
+    <div style="display:flex;justify-content:flex-end;margin-top:16px;">
+      <button onclick="nextSlide()">Continue</button>
+    </div>
+  </div>
+</div>
 
 <div class="app">
 
-<!-- MAIN SCREEN -->
 <div id="screen-main">
-    <h1>Tax Owing Tracker</h1>
-    <div id="fyLabel">Financial Year: —</div>
+<h1>Tax Owing Tracker</h1>
 
-    <div class="numbers">
-        <div>$18,200</div>
+<div class="fy-row">
+    <div class="fy-controls">
+        <button onclick="changeFY(-1)">←</button>
+        <span id="fyText"></span>
+        <button onclick="changeFY(1)">→</button>
+    </div>
+    <button onclick="openResetModal()" style="font-size:11px;opacity:.6">Reset FY</button>
+</div>
+
+<div class="numbers">
+    <div class="threshold">$18,200</div>
+    <div class="totals">
         <div id="incomeDisplay">$0</div>
-    </div>
-
-    <div class="bar-container">
-        <div class="bar-fill" id="barFill"></div>
-    </div>
-
-    <div class="controls">
-        <input id="amountInput" type="number" placeholder="Amount $" />
-        <input id="descInput" type="text" placeholder="Description" />
-        <button onclick="addIncome()">Add Income</button>
-        <button onclick="addDeduction()">Add Deduction</button>
-    </div>
-
-    <div class="section">
-        <h2>Income <button onclick="showIncome()">View all</button></h2>
-        <div id="incomePreview"></div>
-    </div>
-
-    <div class="section">
-        <h2>Deductions <button onclick="showDeductions()">View all</button></h2>
-        <div id="deductionPreview"></div>
+        <div id="taxEstimate"></div>
     </div>
 </div>
 
-<!-- INCOME LOG -->
+<div class="bar-container">
+    <div class="bar-fill" id="barFill"></div>
+</div>
+
+<div style="font-size:11px;color:#7a7a7a;margin:-10px 0 14px 0;">
+The goal is to bring this back to $18,200.
+</div>
+
+<div class="controls">
+    <input id="amountInput" type="number" placeholder="Amount $" />
+    <input id="descInput" type="text" placeholder="Description" />
+    <button onclick="addIncome()">Add Income</button>
+    <button onclick="addDeduction()">Add Deduction</button>
+</div>
+
+<div class="section">
+    <h2>Income <button onclick="showIncome()">View all</button></h2>
+    <div id="incomePreview"></div>
+</div>
+
+<div class="section">
+    <h2>Deductions <button onclick="showDeductions()">View all</button></h2>
+    <div id="deductionPreview"></div>
+</div>
+</div>
+
 <div id="screen-income" class="hidden">
-    <div class="nav"><button onclick="showMain()">← Back</button></div>
-    <h1>Income Log</h1>
-    <div id="incomeLog"></div>
+<div class="nav"><button onclick="showMain()">← Back</button></div>
+<h1>Income Log</h1>
+<div id="incomeLog"></div>
 </div>
 
-<!-- DEDUCTION LOG -->
 <div id="screen-deduction" class="hidden">
-    <div class="nav"><button onclick="showMain()">← Back</button></div>
-    <h1>Deduction Log</h1>
-    <div id="deductionLog"></div>
+<div class="nav"><button onclick="showMain()">← Back</button></div>
+<h1>Deduction Log</h1>
+<div id="deductionLog"></div>
 </div>
 
+</div>
+
+<!-- RESET MODAL -->
+<div id="resetModal" class="hidden">
+<div class="modal-backdrop" onclick="closeResetModal()">
+<div class="modal" onclick="event.stopPropagation()">
+<div style="margin-bottom:12px">Reset financial year?</div>
+<div id="resetText" style="font-size:12px;opacity:.7;margin-bottom:16px"></div>
+<div style="display:flex;gap:8px;justify-content:flex-end">
+<button onclick="closeResetModal()">No</button>
+<button onclick="doResetFY()" style="background:#ff5f57;border-color:#ff5f57">Yes</button>
+</div>
+</div>
+</div>
 </div>
 
 <script>
-const BASE = 18200;
-const maxRange = 50000;
-const STORAGE_KEY = "taxTrackerFY";
 
-function getFinancialYear() {
-    const d = new Date();
-    const y = d.getFullYear();
-    return d.getMonth() >= 6 ? `${y}-${y + 1}` : `${y - 1}-${y}`;
+/* ---------- Progressive Tax ---------- */
+function calculateTax(income){
+    let tax = 0;
+
+    if(income <= 18200) return 0;
+
+    if(income <= 45000){
+        tax = (income - 18200) * 0.19;
+    }
+    else if(income <= 120000){
+        tax = (45000 - 18200) * 0.19
+            + (income - 45000) * 0.325;
+    }
+    else if(income <= 180000){
+        tax = (45000 - 18200) * 0.19
+            + (120000 - 45000) * 0.325
+            + (income - 120000) * 0.37;
+    }
+    else{
+        tax = (45000 - 18200) * 0.19
+            + (120000 - 45000) * 0.325
+            + (180000 - 120000) * 0.37
+            + (income - 180000) * 0.45;
+    }
+
+    return tax;
 }
 
-const currentFY = getFinancialYear();
-document.getElementById("fyLabel").textContent = `Financial Year: ${currentFY}`;
-
-let store = JSON.parse(localStorage.getItem(STORAGE_KEY)) || {};
-store[currentFY] ||= { incomes: [], deductions: [] };
-
-// keep only current + previous FY
-const fyKeys = Object.keys(store).sort();
-while (fyKeys.length > 2) delete store[fyKeys.shift()];
-
-let incomes = store[currentFY].incomes;
-let deductions = store[currentFY].deductions;
-
-const incomeDisplay = document.getElementById("incomeDisplay");
-const barFill = document.getElementById("barFill");
-const amountInput = document.getElementById("amountInput");
-const descInput = document.getElementById("descInput");
-const incomePreview = document.getElementById("incomePreview");
-const deductionPreview = document.getElementById("deductionPreview");
-const incomeLog = document.getElementById("incomeLog");
-const deductionLog = document.getElementById("deductionLog");
-
-function save() {
-    store[currentFY] = { incomes, deductions };
-    localStorage.setItem(STORAGE_KEY, JSON.stringify(store));
+/* ---------- FY ---------- */
+function getFinancialYear(){
+    const d=new Date();
+    const y=d.getFullYear();
+    return d.getMonth()>=6?`${y}-${y+1}`:`${y-1}-${y}`;
 }
 
-function calculateTotal() {
-    const inc = incomes.reduce((a, b) => a + b.amount, 0);
-    const ded = deductions.reduce((a, b) => a + b.amount, 0);
-    return Math.max(0, inc - ded);
+let currentFY=getFinancialYear();
+const STORAGE_KEY="taxTrackerFY";
+let store=JSON.parse(localStorage.getItem(STORAGE_KEY))||{};
+if(!store[currentFY]) store[currentFY]={incomes:[],deductions:[]};
+
+let incomes=store[currentFY].incomes;
+let deductions=store[currentFY].deductions;
+
+function save(){
+    store[currentFY]={incomes,deductions};
+    localStorage.setItem(STORAGE_KEY,JSON.stringify(store));
 }
 
-function updateUI() {
-    const total = calculateTotal();
-    incomeDisplay.textContent = `$${total.toLocaleString()}`;
-    const taxable = Math.max(total - BASE, 0);
-    barFill.style.width = Math.min((taxable / maxRange) * 100, 100) + "%";
+/* ---------- UI ---------- */
+const incomeDisplay=document.getElementById("incomeDisplay");
+const taxEstimate=document.getElementById("taxEstimate");
+const barFill=document.getElementById("barFill");
+const amountInput=document.getElementById("amountInput");
+const descInput=document.getElementById("descInput");
+const incomePreview=document.getElementById("incomePreview");
+const deductionPreview=document.getElementById("deductionPreview");
+const incomeLog=document.getElementById("incomeLog");
+const deductionLog=document.getElementById("deductionLog");
+
+function setFYLabel(){
+    document.getElementById("fyText").textContent=`Financial Year: ${currentFY}`;
+}
+
+function totals(){
+    return{
+        gross:incomes.reduce((a,b)=>a+b.amount,0),
+        ded:deductions.reduce((a,b)=>a+b.amount,0)
+    };
+}
+
+function updateUI(){
+    const {gross,ded}=totals();
+    const net=gross-ded;
+    const taxable=Math.max(net,0);
+    const tax=calculateTax(taxable);
+
+    incomeDisplay.textContent=`$${net.toLocaleString()}`;
+    taxEstimate.textContent=tax>0
+        ?`$${tax.toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2})} tax estimate`
+        :"";
+
+    barFill.style.width=Math.min((taxable/50000)*100,100)+"%";
+
     renderPreviews();
     renderLogs();
     save();
 }
 
-function renderPreviews() {
-    incomePreview.innerHTML = incomes.slice(-3).reverse().map(renderItem).join("");
-    deductionPreview.innerHTML = deductions.slice(-3).reverse().map(renderItem).join("");
+function renderPreviews(){
+    incomePreview.innerHTML=incomes.slice(-3).reverse().map(renderItem).join("");
+    deductionPreview.innerHTML=deductions.slice(-3).reverse().map(renderItem).join("");
 }
 
-function renderLogs() {
-    incomeLog.innerHTML = incomes.map(renderItemWithDelete("income")).join("");
-    deductionLog.innerHTML = deductions.map(renderItemWithDelete("deduction")).join("");
+function renderLogs(){
+    incomeLog.innerHTML=incomes.map((i,idx)=>renderItemWithDelete("income")(i,idx)).reverse().join("");
+    deductionLog.innerHTML=deductions.map((i,idx)=>renderItemWithDelete("deduction")(i,idx)).reverse().join("");
 }
 
-function renderItem(item) {
-    return `
-    <div class="log-item">
-        <div class="log-top"><span>$${item.amount.toLocaleString()}</span></div>
-        <div class="desc">${item.desc || "—"}</div>
-    </div>`;
+function renderItem(item){
+    return `<div class="log-item"><div class="log-top"><span>$${item.amount.toLocaleString()}</span></div><div class="desc">${item.desc||"—"}</div></div>`;
 }
 
-function renderItemWithDelete(type) {
-    return (item, i) => `
-    <div class="log-item">
-        <div class="log-top">
-            <span>${type === "income" ? "$" : "-$"}${item.amount.toLocaleString()}</span>
-            <span class="delete" onclick="deleteEntry('${type}', ${i})">✕</span>
-        </div>
-        <div class="desc">${item.desc || "—"}</div>
-    </div>`;
+function renderItemWithDelete(type){
+    return (item,i)=>`<div class="log-item"><div class="log-top"><span>${type==="income"?"$":"-$"}${item.amount.toLocaleString()}</span><span class="delete" onclick="deleteEntry('${type}',${i})">✕</span></div><div class="desc">${item.desc||"—"}</div></div>`;
 }
 
-function addIncome() {
-    const amount = Number(amountInput.value);
-    if (!amount) return;
-    incomes.push({ amount, desc: descInput.value, time: Date.now(), fy: currentFY });
-    clearInputs();
+/* ---------- Actions ---------- */
+function addIncome(){
+    const amount=Number(amountInput.value);
+    if(!amount) return;
+    incomes.push({amount,desc:descInput.value});
+    clearInputs();updateUI();
+}
+function addDeduction(){
+    const amount=Number(amountInput.value);
+    if(!amount) return;
+    deductions.push({amount,desc:descInput.value});
+    clearInputs();updateUI();
+}
+function deleteEntry(type,index){
+    type==="income"?incomes.splice(index,1):deductions.splice(index,1);
     updateUI();
 }
+function clearInputs(){amountInput.value="";descInput.value="";}
 
-function addDeduction() {
-    const amount = Number(amountInput.value);
-    if (!amount) return;
-    deductions.push({ amount, desc: descInput.value, time: Date.now(), fy: currentFY });
-    clearInputs();
-    updateUI();
-}
-
-function deleteEntry(type, index) {
-    type === "income" ? incomes.splice(index, 1) : deductions.splice(index, 1);
-    updateUI();
-}
-
-function clearInputs() {
-    amountInput.value = "";
-    descInput.value = "";
-}
-
-function toggle(id) {
-    document.querySelectorAll("[id^='screen']").forEach(s => s.classList.add("hidden"));
+/* ---------- Navigation ---------- */
+function toggle(id){
+    document.querySelectorAll("[id^='screen']").forEach(s=>s.classList.add("hidden"));
     document.getElementById(id).classList.remove("hidden");
 }
+function showMain(){toggle("screen-main");}
+function showIncome(){toggle("screen-income");}
+function showDeductions(){toggle("screen-deduction");}
 
-const showMain = () => toggle("screen-main");
-const showIncome = () => toggle("screen-income");
-const showDeductions = () => toggle("screen-deduction");
+function changeFY(direction){
+    const [start]=currentFY.split("-").map(Number);
+    const next=start+direction;
+    currentFY=`${next}-${next+1}`;
+    if(!store[currentFY]) store[currentFY]={incomes:[],deductions:[]};
+    incomes=store[currentFY].incomes;
+    deductions=store[currentFY].deductions;
+    setFYLabel();
+    updateUI();
+}
 
+/* ---------- Reset ---------- */
+function openResetModal(){
+    document.getElementById("resetText").textContent=`This will permanently delete all data for ${currentFY}.`;
+    document.getElementById("resetModal").classList.remove("hidden");
+}
+function closeResetModal(){
+    document.getElementById("resetModal").classList.add("hidden");
+}
+function doResetFY(){
+    incomes.length=0;
+    deductions.length=0;
+    updateUI();
+    closeResetModal();
+}
+
+/* ---------- Init ---------- */
+setFYLabel();
 updateUI();
-</script>
 
+</script>
 </body>
 </html>
